<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.cucumber</groupId>
        <artifactId>cucumber-parent</artifactId>
        <version>1.0.3</version>
    </parent>
    <artifactId>cucumber-jvm</artifactId>
    <version>4.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Cucumber-JVM</name>
    <description>Cucumber for the JVM</description>
    <url>http://cucumber.io/</url>

    <developers>
        <developer>
            <id>ahellesoy</id>
            <name>Aslak Hellesøy</name>
            <email>aslak.hellesoy@gmail.com</email>
            <organization>Cucumber</organization>
            <organizationUrl>https://github.com/cucumber</organizationUrl>
        </developer>
        <developer>
            <id>brasmusson</id>
            <name>Björn Rasmusson</name>
            <email>brasmusson@computer.org</email>
            <organization>Cucumber</organization>
            <organizationUrl>https://github.com/cucumber</organizationUrl>
        </developer>
        <developer>
            <id>mpkorstanje</id>
            <name>M.P. Korstanje</name>
            <email>rien.korstanje@gmail.com</email>
            <organization>Cucumber</organization>
            <organizationUrl>https://github.com/cucumber</organizationUrl>
        </developer>
    </developers>


    <properties>
        <!--Dependencies -->
        <gherkin.version>5.1.0</gherkin.version>
        <cucumber-expressions.version>6.2.0</cucumber-expressions.version>
        <datatable.version>1.1.12</datatable.version>
        <tag-expressions.version>1.1.1</tag-expressions.version>
        <cucumber-html.version>0.2.7</cucumber-html.version>

        <!--Test Dependencies-->
        <junit.version>4.12</junit.version>
        <junit-jupiter.version>5.3.1</junit-jupiter.version>
        <junit-platform.version>1.3.1</junit-platform.version>
        <hamcrest.version>1.3</hamcrest.version>
        <assertj.core.version>3.11.1</assertj.core.version>
        <mockito.version>2.21.0</mockito.version>

        <!--Maven plugins-->
        <groovy.version>2.5.5</groovy.version>
        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
    </properties>
    <scm>
        <connection>scm:git:git://github.com/cucumber/cucumber-jvm.git</connection>
        <developerConnection>scm:git:git@github.com:cucumber/cucumber-jvm.git</developerConnection>
        <url>git://github.com/cucumber/cucumber-jvm.git</url>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>gherkin</artifactId>
                <version>${gherkin.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.cucumber</groupId>
                        <artifactId>gherkin-jvm-deps</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>tag-expressions</artifactId>
                <version>${tag-expressions.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-expressions</artifactId>
                <version>${cucumber-expressions.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>datatable</artifactId>
                <version>${datatable.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>datatable-matchers</artifactId>
                <version>${datatable.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-java8</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-junit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-testng</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-picocontainer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-html</artifactId>
                <version>${cucumber-html.version}</version>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-kotlin-java8</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.core.version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-core</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>


        </dependencies>
    </dependencyManagement>

    <modules>
        <module>core</module>
        <module>java</module>
        <module>java8</module>
        <module>kotlin-java8</module>
        <module>testng</module>
        <module>picocontainer</module>
        <module>junit</module>
        <module>spring</module>
        <module>guice</module>
        <module>weld</module>
        <module>openejb</module>
        <module>needle</module>
    </modules>

    <profiles>
        <profile>
            <id>examples</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>examples</module>
            </modules>
        </profile>

        <profile>
            <id>coveralls.io</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>${cobertura-maven-plugin.version}</version>
                            <configuration>
                                <formats>
                                    <format>xml</format>
                                </formats>

                                <aggregate>true</aggregate>
                                <instrumentation>
                                    <ignoreTrivial>true</ignoreTrivial>
                                </instrumentation>
                                <check />
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.eluder.coveralls</groupId>
                            <artifactId>coveralls-maven-plugin</artifactId>
                            <version>4.3.0</version>
                            <configuration>
                                <sourceDirectories>
                                    <sourceDirectory>${basedir}/java/target/generated-sources/i18n/java
                                    </sourceDirectory>
                                    <sourceDirectory>${basedir}/java8/target/generated-sources/i18n/java8
                                    </sourceDirectory>
                                </sourceDirectories>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>check-semantic-version</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.revapi</groupId>
                        <artifactId>revapi-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>check</id>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Standard plugins - alphabetically -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.codehaus.groovy</groupId>
                            <artifactId>groovy-ant</artifactId>
                            <version>${groovy.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.codehaus.groovy</groupId>
                            <artifactId>groovy-templates</artifactId>
                            <version>${groovy.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>io.cucumber</groupId>
                            <artifactId>gherkin</artifactId>
                            <version>${gherkin.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.2</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <source>1.8</source>
                        <target>1.8</target>
                        <compilerArgument>-Werror</compilerArgument>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <use>false</use>
                        <excludePackageNames>io.cucumber.examples*,org.springframework</excludePackageNames>
                        <links>
                            <link>http://docs.oracle.com/javase/7/docs/api/</link>
                            <link>http://junit.sourceforge.net/javadoc/</link>
                        </links>
                        <groups>
                            <group>
                                <title>API Packages</title>
                                <packages>
                                    cucumber.api.*:io.cucumber.core.api:io.cucumber.core.api.*:io.cucumber.junit.api:io.cucumber.testng.api
                                </packages>
                            </group>
                            <group>
                                <title>I18n</title>
                                <packages>io.cucumber.java8.api.lambda:io.cucumber.java8.api.annotation.*</packages>
                            </group>
                            <group>
                                <title>Dependency Injection Providers</title>
                                <packages>
                                    io.cucumber.spring:io.cucumber.weld:io.cucumber.guice:io.cucumber.needle:io.cucumber.picocontainer:io.cucumber.openejb
                                </packages>
                            </group>
                        </groups>
                        <stylesheet>java</stylesheet>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>-Duser.language=en</argLine>
                        <argLine>-Xmx1024m</argLine>
                        <argLine>-XX:MaxPermSize=256m</argLine>
                        <argLine>-Dfile.encoding=UTF-8</argLine>
                        <useFile>false</useFile>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.junit.jupiter</groupId>
                            <artifactId>junit-jupiter-engine</artifactId>
                            <version>${junit-jupiter.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.junit.platform</groupId>
                            <artifactId>junit-platform-engine</artifactId>
                            <version>${junit-platform.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.junit.vintage</groupId>
                            <artifactId>junit-vintage-engine</artifactId>
                            <version>${junit-jupiter.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>

                <plugin>
                    <groupId>org.revapi</groupId>
                    <artifactId>revapi-maven-plugin</artifactId>
                    <version>0.10.5</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.revapi</groupId>
                            <artifactId>revapi-java</artifactId>
                            <version>0.18.2</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <analysisConfiguration>
                            <revapi.semver.ignore>
                                <enabled>true</enabled>
                                <versionIncreaseAllows>
                                    <major>breaking</major>
                                    <minor>nonBreaking</minor>
                                    <patch>equivalent</patch>
                                </versionIncreaseAllows>
                            </revapi.semver.ignore>
                            <revapi.java>
                                <filter>
                                    <packages>
                                        <regex>true</regex>
                                        <exclude>
                                            <!--The logging dependencies for Spring are provided. This causes them to
                                            be missing in the dependency hierarchy. A false positive. -->
                                            <item>org\.springframework\..*</item>
                                        </exclude>
                                    </packages>
                                </filter>
                            </revapi.java>
                        </analysisConfiguration>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
